--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
 spring.datasource.url = jdbc:mysql://:3306/fleetmanager
 spring.datasource.username=
 spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=update
