--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-spring.datasource.url = jdbc:mysql://:3306/fleetmanager
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+entitymanager.packages.to.scan=fi.eatech.fleetmanagerws.model
+hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+database.driver=com.mysql.jdbc.Driver
