--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>2.7.0</version>
         </dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-csv</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
