--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8080
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-spring.profiles.active=production
 
 entitymanager.packages.to.scan=fi.eatech.fleetmanagerws.model
 hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-database.driver=com.mysql.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+database.driver=org.h2.Driver
