--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   backend:
     build: .
+    restart: always
     environment:
       - DATABASE_URL=jdbc:mysql://mysql:3306/fleetmanager
       - DATABASE_USERNAME=root
